# tsdat

./: .coveragerc  .gitignore  .readthedocs.yml  DISCLAIMER.md  Dockerfile  LICENSE.md  MANIFEST.in  Makefile  README-CYTHON.md  README.md  Untitled.ipynb  build.sh  conda_environment.yml  docker-compose.yml  environment.yml  file_uploaded.txt  mkdocs.yml  notes-retriever.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_list_object.ipynb  test_put_object.ipynb  transform.ipynb
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  pypi-release.yml  pytest.yml
.ipynb_checkpoints/: test_put_object-checkpoint.ipynb
cds3/: __init__.py  ccds3.pxd  ccds3_enums.pxd  core.pxd  core.pyx  enums.pyx
docker/: Dockerfile  Dockerfile-bak  Dockerfile.lambda  Dockerfile.no-anaconda  README-RELEASE.md  README.md  build.sh  docker-compose.yml
docker/old/: Dockerfile.anaconda  Dockerfile.no-anaconda
docs/: Makefile  README.md  collaboration.md  example_pipelines.md  gen_doc_stubs.py  getting_started.md  index.md  ncconvert.md  requirements.txt
docs/API/: config.md  index.md  io.md  pipeline.md  qc.md  transform.md  tstring.md  utils.md
docs/config/: aws_template.md  configuring_tsdat.md  dataset_config.md  errors.md  hook_functions.md  pipeline_config.md  pydantic.md  quality_control.md  retriever_config.md  storage_config.md  transform_config.md
docs/extras/: ncconvert.md  tools.md
docs/figures/: pipeline.yaml
docs/source/: about.rst  acknowledgements.rst  advanced.rst  api.rst  collaboration.rst  conf.py  configuring_tsdat.rst  developer_guide.rst  examples_and_tutorials.rst  filehandlers.rst  getting_started.rst  index.rst  pipelines.rst  quality_control.rst  storage.rst  user_guide.rst
docs/stylesheets/: extra.css
docs/tutorials/: aws_template.md  data_ingest.md  pipeline_customization.md  quality.md  setup_wsl.md  setup_wsl_docker.md  vap_pipelines.md
dsproc3/: __init__.py  cdsproc3.pxd  cdsproc3_enums.pxd  core.pxd  core.pyx  enums.pyx
examples/: __init__.py  apply_qc.py  ingest_pipeline_example.py  run_buoy_ingest.py  run_pipeline.py
examples/a2e_buoy_ingest/: __init__.py  __main__.py  config.yml  humboldt_config.yml  ingest.py  morro_config.yml  pipeline.py  run_pipeline.py  runner.py  styling.mplstyle
examples/a2e_imu_ingest/: __init__.py  __main__.py  config.yml  humboldt_config.yml  imu_filehandler.py  ingest.py  morro_config.yml  pipeline.py  runner.py
examples/a2e_lidar_ingest/: __init__.py  __main__.py  humboldt_config.yml  ingest.py  morro_config.yml  runner.py  sta_filehandler.py  sta_pipeline.py
examples/a2e_waves_ingest/: __init__.py  __main__.py  config.yml  humboldt_config.yml  ingest.py  morro_config.yml  pipeline.py  run_pipeline.py  runner.py  styling.mplstyle
examples/data/: ingest_pipeline.yml  ingest_pipeline_template.yml  pipeline.yml  qc.yml  test_data.csv  test_data.xlsx  test_data_bad_temp_bad_delta.csv  test_data_bad_temp_too_low.csv  test_data_missing_temp.csv  test_data_missing_time.csv
examples/templates/: ingest_pipeline_example.yml  ingest_pipeline_template.yml  storage_template.yml
examples_dev/: README.md  act.ipynb  code.py  s3_test.py  test_string_func.py  xarray.ipynb
examples_dev/data/: code_example.yaml
examples_dev/python_snippets/: README.md  plugins.py  tdms_to_csv.py  xarray_test.py
foo/: __init__.py  test.py
ideas/: dataset-config.yaml  input-config.yaml  io-config.yaml  retrieval-config.yaml  storage-config.yaml
ideas/simple/: config.yaml  dataset.yaml  io.yaml  pipeline.yaml  qc.yaml  retriever.yaml  storage.yaml
scripts/: generate_schema.py
test/: .gitignore  test_cli.py  test_main.py  test_tstring.py  utils.py
test/adi/: test_transform.py
test/config/: test_dataset_config.py  test_pipeline_config.py  test_quality_config.py  test_retriever_config.py  test_storage_config.py
test/io/: conftest.py  test_a2e_csv.py  test_converters.py  test_data_handlers.py  test_retrievers.py  test_storage.py  test_transform_v2.py
test/pipeline/: examples.py  test_pipeline.py
test/qc/: conftest.py  test_check_acoustic_signal_correlation.py  test_check_outliers.py  test_checkers.py  test_fail_pipeline_provides_useful_message.py  test_monotonic_check_ignores_string_vars.py  test_monotonic_with_2d_vars.py  test_qc.py  test_record_quality_results.py  test_replace_failed_values.py  test_sort_dataset_by_coordinate.py  test_valid_delta.py
test/utils/: test_get_filename.py
tests/: README.md  __init__.py  test_custom_pipeline.py  test_examples.py  test_filesystem_storage.py  test_handlers.py  test_pipeline.py  test_pipeline_aws.py  test_qc.py  test_standardize.py  test_utils.py
tests/config/: pipeline_fail_monotonic.yml  pipeline_invalid.yml  pipeline_robust.yml  storage.yml
tests/data/: bad_time.csv  processed_data.nc  qc.yml
tests/expected/: humboldt.buoy_z05-10min.a1.20201201.000000.nc  humboldt.buoy_z05-imu.a1.20201201.000008.nc  humboldt.buoy_z05-lidar-10min.a1.20201201.001000.nc  humboldt.buoy_z05-waves-20min.a1.20201201.000000.nc  (+4 more)
trans/: __init__.py  core.pxd  core.pyx
tsdat/: __init__.py  __main__.py  config.py  dataset.py  dsutils.py  main.py  pipeline.py  settings.py  standards.py  testing.py  tstring.py  utils.py
tsdat/cli/: cli.py  (+2 more)
tsdat_testbed.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+467 files in other folders)
