[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]

[project]
authors = [
  { name="tsdat", email="tsdat@pnnl.gov" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]
dependencies = [    
  "act-atmos >=1.1.3,!=1.3.1,!=1.3.3",
  "cftime",
  "dunamai==1.9.0",
  "jsonpointer==2.2",
  "netCDF4 <=1.7.0",
  "numpy >=1.2",
  "pandas >=1.2",
  "pint",
  "pydantic >=1.10.0, <2.0.0",
  "pyyaml >=5.4",
  "rich",
  "typer >=0.4",
  "xarray",
]
description = "A data processing framework used to convert time series data into standardized format."
dynamic = ["version"]
keywords = ["data", "pipeline"]
license = {file = "LICENSE.md"}
name = "tsdat"
readme = "README.md"
requires-python = ">=3.10"


[project.optional-dependencies]
aws = ["boto3"]
complete = ["tsdat[aws,io,ocean]"]
dev = [
  "tsdat[complete]",
  "black",
  "boto3-stubs[essential]",
  "build",
  "coverage",
  "mkdocs-gen-files",
  "mkdocs-literate-nav",
  "mkdocs-material",
  "mkdocstrings[python]",
  "moto[s3,sts]==4.0.1",
  "mypy",
  "pandas-stubs",
  "pytest",
  "ruff",
  "types-PyYAML",
]
io = [
  "h5netcdf",
  "pyarrow",
  "zarr",
]
ocean = [
  "mhkit",
  "matplotlib!=3.9.1.post1",  # mhkit doesn't like this version string
]

[project.scripts]
tsdat = "tsdat.cli:app"

[tool.setuptools.packages.find]
include = ["tsdat"]

[tool.setuptools.package-data]
tsdat = ["py.typed"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "tsdat/_version.py"

[tool.setuptools.dynamic]
version = {attr = "tsdat._version.__version__"}

[tool.pytest.ini_options]
# To run all non-adi-dependent tests: `pytest -m "not requres_adi"`
addopts = "-x"
markers = "requires_adi: mark test as requiring arm data integrator (adi) python/c libraries"
testpaths = "test"
